--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,34 @@
 {
-    "name": "angular-morris-chart",
-    "main": "src/angular-morris-chart.min.js",
-    "version": "1.0.2",
-    "authors": [
-        "Stewan Pacheco <talk@stpa.co>"
-    ],
-    "description": "Wrapper of morris.js for AngularJS",
-    "keywords": [
-        "angular",
-        "morris",
-        "chart"
-    ],
-    "license": "MIT",
-    "homepage": "https://angular-morris-chart.stpa.co",
-    "private": false,
-    "dependencies": {
-        "angular": "1.3.x",
-        "morris.js": "~0.5.1"
-    },
-    "devDependencies": {
-        "moment": "~2.8.4",
-        "bootstrap": "~3.3.1"
-    },
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ]
+  "name": "angular-morris-chart",
+  "main": "src/angular-morris-chart.min.js",
+  "version": "1.0.2",
+  "authors": [
+    "Stewan Pacheco <talk@stpa.co>"
+  ],
+  "description": "Wrapper of morris.js for AngularJS",
+  "keywords": [
+    "angular",
+    "morris",
+    "chart"
+  ],
+  "license": "MIT",
+  "homepage": "https://angular-morris-chart.stpa.co",
+  "private": false,
+  "dependencies": {
+    "angular": "1.3.x",
+    "morris.js": "0.5.x"
+  },
+  "devDependencies": {
+    "moment": "~2.8.4",
+    "bootstrap": "~3.3.1",
+    "highlightjs": "~8.5.0",
+    "angular-mocks": "~1.3.15"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
