--- a/package.json
+++ b/package.json
@@ -1,53 +1,74 @@
 {
-    "name": "angular-morris-chart",
-    "version": "1.0.2",
-    "private": false,
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/stpa-co/angular-morris-chart"
-    },
-    "main": "src/angular-morris-chart.min.js",
-    "dependencies": {
-        "angular": "1.3.x",
-        "morris.js": "~0.5.1"
-    },
-    "devDependencies": {
-        "browser-sync": "^1.8.2",
-        "chalk": "^0.5.1",
-        "del": "^0.1.3",
-        "gulp": "^3.8.0",
-        "gulp-csso": "^0.2.9",
-        "gulp-file-include": "^0.7.1",
-        "gulp-filter": "^2.0.0",
-        "gulp-jshint": "^1.8.0",
-        "gulp-load-plugins": "^0.6.0",
-        "gulp-markdown": "^1.0.0",
-        "gulp-markdown-docs": "^0.1.0",
-        "gulp-ng-annotate": "^0.3.0",
-        "gulp-rename": "^1.2.0",
-        "gulp-rev": "^2.0.1",
-        "gulp-rev-replace": "^0.3.1",
-        "gulp-size": "^1.1.0",
-        "gulp-strip-debug": "1.0.1",
-        "gulp-uglify": "^1.0.0",
-        "gulp-useref": "^1.0.2",
-        "gulp-watch": "3.0.0",
-        "highlight.js": "^8.4.0",
-        "http-proxy": "^1.8.1",
-        "jshint-stylish": "^0.4.0",
-        "main-bower-files": "^2.0.0",
-        "markdown-it": "^2.1.3",
-        "marked": "^0.3.2",
-        "require-dir": "^0.1.0",
-        "uglify-save-license": "^0.4.1"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "keywords": [
-        "angular",
-        "angular directive",
-        "angular chart",
-        "angular morris"
-    ]
+  "name": "angular-morris-chart",
+  "version": "1.0.2",
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/stewones/angular-morris-chart"
+  },
+  "main": "src/angular-morris-chart.min.js",
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "~2.1.4",
+    "browser-sync-spa": "~1.0.2",
+    "chalk": "~0.5.1",
+    "concat-stream": "~1.4.7",
+    "del": "~1.1.1",
+    "gulp": "~3.8.10",
+    "gulp-angular-constant": "^0.3.0",
+    "gulp-angular-filesort": "~1.0.4",
+    "gulp-angular-templatecache": "~1.5.0",
+    "gulp-autoprefixer": "~2.1.0",
+    "gulp-csso": "~1.0.0",
+    "gulp-file-include": "^0.9.0",
+    "gulp-filter": "~2.0.2",
+    "gulp-flatten": "~0.0.4",
+    "gulp-inject": "~1.1.1",
+    "gulp-jshint": "~1.9.0",
+    "gulp-less": "~3.0.0",
+    "gulp-load-plugins": "~0.8.0",
+    "gulp-markdown": "^1.0.0",
+    "gulp-minify-html": "~0.1.7",
+    "gulp-ng-annotate": "~0.5.2",
+    "gulp-protractor": "~0.0.12",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.5.0",
+    "gulp-rev": "~3.0.1",
+    "gulp-rev-replace": "~0.3.1",
+    "gulp-size": "~1.2.0",
+    "gulp-sourcemaps": "~1.3.0",
+    "gulp-uglify": "~1.1.0",
+    "gulp-useref": "~1.1.0",
+    "gulp-util": "~3.0.2",
+    "http-proxy": "~1.8.0",
+    "jshint-stylish": "~1.0.0",
+    "karma": "~0.12.31",
+    "karma-angular-filesort": "^0.1.0",
+    "karma-coverage": "^0.3.1",
+    "karma-jasmine": "~0.3.1",
+    "karma-mocha-reporter": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "~0.1.2",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "lodash": "~3.2.0",
+    "main-bower-files": "~2.5.0",
+    "merge-stream": "~0.1.7",
+    "protractor": "~1.7.0",
+    "require-dir": "~0.1.0",
+    "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.0",
+    "wrench": "~1.5.8",
+    "yargs": "^3.9.0"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "scripts": {
+    "start": ""
+  },
+  "keywords": [
+    "angular",
+    "angular directive",
+    "angular chart",
+    "angular morris"
+  ]
 }
