--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
+before_script:
+  - npm install -g bower
+  - bower install
 script: bower install && npm install && npm test
