build fixes resolves #6 resolves #7 resolves #8

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-angular-filesort": "~1.0.4",
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
+    "gulp-concat": "^2.5.2",
     "gulp-csso": "~1.0.0",
     "gulp-file-include": "^0.9.0",
     "gulp-filter": "~2.0.2",
@@ -54,6 +55,8 @@
     "merge-stream": "~0.1.7",
     "protractor": "~1.7.0",
     "require-dir": "~0.1.0",
+    "stream-series": "^0.1.1",
+    "strip-debug": "^1.1.1",
     "uglify-save-license": "~0.4.1",
     "wiredep": "~2.2.0",
     "wrench": "~1.5.8",
