--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "chalk": "~0.5.1",
     "concat-stream": "~1.4.7",
     "del": "~1.1.1",
-    "gulp": "~3.8.10",
+    "gulp": "^3.9.0",
     "gulp-angular-constant": "^0.3.0",
     "gulp-angular-filesort": "~1.0.4",
     "gulp-angular-templatecache": "~1.5.0",
