--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular-morris-chart",
   "version": "1.1.0",
   "private": false,
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/stewones/angular-morris-chart"
@@ -29,7 +30,7 @@
     "gulp-less": "~3.0.0",
     "gulp-load-plugins": "~0.8.0",
     "gulp-markdown": "^1.0.0",
-    "gulp-minify-html": "~0.1.7",
+    "gulp-htmlmin": "1.3.0",
     "gulp-ng-annotate": "~0.5.2",
     "gulp-protractor": "~0.0.12",
     "gulp-rename": "~1.2.0",
