--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "gulp-file-include": "^0.9.0",
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-inject": "~1.1.1",
     "gulp-jshint": "~1.9.0",
     "gulp-less": "~3.0.0",
     "gulp-load-plugins": "~0.8.0",
     "gulp-markdown": "^1.0.0",
-    "gulp-htmlmin": "1.3.0",
+    "gulp-minify-html": "^1.0.5",
     "gulp-ng-annotate": "~0.5.2",
     "gulp-protractor": "~0.0.12",
     "gulp-rename": "~1.2.0",
