--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
+  - "4.4.3"
   - "0.12"
   - "0.11"
   - "0.10"
 before_script:
+  - npm install -g gulp
   - npm install -g bower
-  - bower install
-script: bower install && npm install && npm test
+script: npm install && npm test
