--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ node_js:
 before_script:
   - npm install -g gulp
   - npm install -g bower
-script: npm install && npm test
+script: npm install -g bower && npm install && npm test
