--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-morris",
+  "private": true,
   "version": "1.3.0",
   "author": "Stewan Pacheco <hi@st1s.io>",
   "license": "MIT",
