--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-morris",
+  "name": "angular-morris-dev",
   "private": true,
   "version": "1.3.0",
   "author": "Stewan Pacheco <hi@st1s.io>",
