--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
-before_script:
+before_install:
   - npm install -g bower
   - npm install -g gulp
 script: npm install && npm test
