chore(): add analytics and update CDN

--- a/client/bower.json
+++ b/client/bower.json
@@ -8,7 +8,9 @@
     "morris.js": "0.5.x",
     "highlightjs": "~8.5.0",
     "appfy-wiki": "*",
-    "angular-socialshare": "angularjs-socialshare#^2.2.5"
+    "angular-socialshare": "angularjs-socialshare#^2.2.5",
+    "angulartics": "^1.1.2",
+    "angulartics-google-analytics": "^0.2.1"
   },
   "devDependencies": {
     "moment": "~2.8.4",
